# aliens-ethkl

./: .gitignore  README.md  asset-manifest.json  index.html  package.json  pyproject.toml
contracts/: game.sol
frontend/: package.json
frontend/src/: AliensGame.json  index.js
frontend/src/components/: ConnectWallet.js  Dapp.js  Defend.js  Kick.js  Loading.js  NetworkErrorMessage.js  NoWalletDetected.js  Punch.js  Ready.js  Run.js  TransactionErrorMessage.js  WaitingForTransactionMessage.js
static/css/: main.13c139b0.css  main.13c139b0.css.map
static/js/: main.097103cf.js  main.097103cf.js.map
